# sleepers-dataset

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt
dataset/: __about__.py  console.py  manage.py  mask.py  overlay.py  patches.py
