[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataset"
description = ''
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "Henrik Leijon", email = "henrik.leijon@trafikverket.se" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "Pillow>=9.3",
  "opencv-python-headless>=4.6",
  "numpy>=1.23"
]

dynamic = ["version"]

[project.optional-dependencies]
tests = [
  "pylint",
  "mypy",
  "flake8",
  "flake8-pyproject",
  "pytest",
  "pytest-cov",
  "types-Pillow"
]

[project.urls]
Documentation = "https://github.com/spiiph/sleepers-dataset#README.md"
Issues = "https://github.com/spiiph/sleepers-dataset/issues"
Source = "https://github.com/spiiph/sleepers-dataset"

[project.scripts]
dataset = "dataset.console:main"

[tool.hatch.version]
path = "dataset/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pylint",
  "mypy",
  "flake8",
  "flake8-pyproject",
  "pytest",
  "pytest-cov",
  "types-Pillow"
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=dataset --cov=tests {args}"
no-cov = "cov --no-cov {args}"
lint = "pylint dataset/*.py"
style = "flake8 dataset/*.py"
types = "mypy dataset/*.py"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.flake8]
max-line-length = 100
count = true

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "dataset/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pylint.'BASIC']
good-names = [
  "i",
  "j",
  "k",
  "x",
  "y",
  "d",
  "e",
  "f"
]

[tool.pylint.'MESSAGES CONTROL']
disable = [
  "missing-module-docstring",
  "logging-fstring-interpolation"
]

[tool.pylint.'DESIGN']
min-public-methods=1

[tool.pylint.'TYPECHECK']
generated-members = [
  "cv2"
]

